# DockerImagesRPI

./: README.md  UPDATE_ALL
.github/workflows/: docker-build-all.yml  docker-build-pr.yml  docker-build-push.yml
dockerfiles/csci1200/: metadata.json
dockerfiles/csci1200/fall25/: Dockerfile
dockerfiles/csci1200/ubuntu22.04/: Dockerfile
dockerfiles/csci4150/: metadata.json
dockerfiles/csci4150/s25/: Dockerfile
dockerfiles/csci4150/ubuntu22.04/: Dockerfile
dockerfiles/csci4210/: metadata.json
dockerfiles/csci4210/ubuntu22.04/: Dockerfile
dockerfiles/csci4450/ubuntu22.04/: Dockerfile
dockerfiles/csci4510/: metadata.json
dockerfiles/csci4510/spring24/: Cargo.toml  Dockerfile
dockerfiles/csci4510/spring24_java/: Dockerfile
dockerfiles/csci4510/spring26/: Dockerfile
dockerfiles/csci4510/ubuntu22.04/: Dockerfile
dockerfiles/csci4550/ubuntu22.04/: Dockerfile
dockerfiles/mane2110/scipy/: Dockerfile
dockerfiles/mane2110/ubuntu22.04_python3.7_scipy/: Dockerfile
