[package]
name = "dockerdeps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Any dependencies provided here will be installed in the image so that
# Rust submissions can be built with them offline.

[dependencies]
serde_json = "1.0.111"